--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^12.12.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-player": "^2.16.0",
     "react-router-dom": "^7.6.0"
   },
   "devDependencies": {
